tests/build/cases/ui_node/delegate_list_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:27
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | --------------------------^-------------------------------------------------
  | |                         |
  | |                         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `info_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn info_all(list: &impl UiNodeList, ctx: &mut InfoContext, info: &mut WidgetInfoBuilder) {
  |                                 ^^^^^^^^^^ required by this bound in `info_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:60
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | -----------------------------------------------------------^----------------
  | |                                                          |
  | |                                                          the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::init_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn init_all(list: &mut impl UiNodeList, ctx: &mut WidgetContext) {
  |                                     ^^^^^^^^^^ required by this bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::init_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:60
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | -----------------------------------------------------------^----------------
  | |                                                          |
  | |                                                          the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::deinit_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn deinit_all(list: &mut impl UiNodeList, ctx: &mut WidgetContext) {
  |                                       ^^^^^^^^^^ required by this bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::deinit_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:60
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | -----------------------------------------------------------^----------------
  | |                                                          |
  | |                                                          the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::update_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn update_all(list: &mut impl UiNodeList, ctx: &mut WidgetContext, updates: &mut WidgetUpdates) {
  |                                       ^^^^^^^^^^ required by this bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::update_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:60
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | -----------------------------------------------------------^----------------
  | |                                                          |
  | |                                                          the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::event_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn event_all(list: &mut impl UiNodeList, ctx: &mut WidgetContext, update: &mut EventUpdate) {
  |                                      ^^^^^^^^^^ required by this bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::event_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:27
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | --------------------------^-------------------------------------------------
  | |                         |
  | |                         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `measure_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn measure_all(list: &impl UiNodeList, ctx: &mut MeasureContext, wm: &mut WidgetMeasure) -> PxSize {
  |                                    ^^^^^^^^^^ required by this bound in `measure_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:60
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | -----------------------------------------------------------^----------------
  | |                                                          |
  | |                                                          the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `layout_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn layout_all(list: &mut impl UiNodeList, ctx: &mut LayoutContext, wl: &mut WidgetLayout) -> PxSize {
  |                                       ^^^^^^^^^^ required by this bound in `layout_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:27
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | --------------------------^-------------------------------------------------
  | |                         |
  | |                         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::render_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn render_all(list: &impl UiNodeList, ctx: &mut RenderContext, frame: &mut FrameBuilder) {
  |                                   ^^^^^^^^^^ required by this bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::render_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type.rs:9:27
  |
9 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | --------------------------^-------------------------------------------------
  | |                         |
  | |                         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::render_update_all`
 --> $WORKSPACE/zero-ui-core/src/widget_instance.rs
  |
  |     pub fn render_update_all(list: &impl UiNodeList, ctx: &mut RenderContext, update: &mut FrameUpdate) {
  |                                          ^^^^^^^^^^ required by this bound in `zero_ui::zero_ui_core::widget_instance::ui_node_list_default::render_update_all`
